Update feature images on Mobile and Plugin Check pages to work with the new universal header design from Bug 619986
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@82335 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/covehead/mobile-home.css
+++ b/style/covehead/mobile-home.css
@@ -10,15 +10,6 @@
 	background: url(/img/covehead/mobile/background-trapeze.png) 100% 0 no-repeat;
 }
 
-#mobile-home.feature-trapeze #feature-header {
-	background: url(/img/covehead/mobile/background-trapeze.png) -661px -10px no-repeat;
-	height: 56px;
-	width: 152px;
-	position: absolute;
-	top: 10px;
-	right: 130px;
-}
-
 #mobile-home #breadcrumbs { display: none; }
 
 #mobile-home #main-feature {
