--- a/style/covehead/plugin-check.css
+++ b/style/covehead/plugin-check.css
@@ -4,15 +4,6 @@
 	background: url(/img/covehead/plugincheck/background.png) 280px 36px no-repeat;
 }
 
-#plugin-check #feature-header {
-	background: url(/img/covehead/plugincheck/background.png) -160px 10px no-repeat;
-	height: 44px;
-	width: 109px;
-	position: absolute;
-	top: 26px;
-	right: 431px;
-}
-
 #main-feature {
 	height: 199px;
 	padding-top: 35px;
